<resources>
    <string name="app_name">Bttleships</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_last">LastActivity</string>
    <string name="green_blob">Green Blob</string>
    <string name="torpedo">Torpedo</string>
    <string name="move_ships">Move a Ship</string>
    <string name="missile">Missile</string>
    <string name="bombard">Bombard</string>
    <string name="invisible">Ghost</string>
    <string name="blue_square">Blue Square</string>
    <string name="weapon_desc_move_ship">Use a turn to move one of your ships</string>
    <string name="weapon_header_move_ship">Move a ship</string>
    <string name="radar">Radar</string>
    <string name="action">Action</string>
    <string name="hit_desc">If you tap one of your ships it will sink as well as the enemy\'s ship in the same square if there is one</string>
    <string name="hit_header">Tap any square</string>
    <string name="move_header">Move a Ship</string>
    <string name="move_desc">Use this turn to move one of your ships</string>
    <string name="torpedo_header">Torpedo</string>
    <string name="torpedo_desc">"Tap one of your ships to select the ship which to send a torpedo from then tap one of the yellow squares, torpedoes only go through %s squares"</string>
    <string name="radar_desc">Tap one your ships to find out if there are enemy ships round there.</string>
    <string name="missile_desc">Tap anywhere on the board including your own ships, but if you do that, your ship sinks too</string>
    <string name="bombard_desc">Tap somewhere to bombard the area, you only get one shot of Bombardment so make sure you choose widely</string>
    <string name="invisible_desc">Use a turn to make your ships invisible to the enemy\'s radar, your ships can still get hit.</string>
    <string name="ship_found">Ship found</string>
</resources>
